[package]
name = "xphoto-wasm"
version = "0.1.0"
authors = ["Josh Hannaford <hannaford.joshua55@gmail.com>"]
description = "This library provides the image manipulation tools necessary for the XPhoto app."
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
photon-rs = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
]

[features]
default = [ "wee_alloc" ]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
